# lazycommit

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  config.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
autocommit/: __init__.py  __main__.py  config.py  constants.py  flows.py  git.py  logger.py  message.py  rewrite.py
committer/: __init__.py  api.py  config.py  console.py  constants.py  flows.py  git.py  logger.py  message.py  rewrite.py
lazycommit/: __init__.py  __main__.py  config.py  console.py  constants.py  flows.py  git.py  logger.py  message.py  rewrite.py
tests/: test_autocommit.py  test_committer.py  test_lazycommit.py
