[project]
name = "autocommit"
version = "1.0.0"
description = "AI-assisted git commit and history rewrite CLI for Conventional Commits"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Fernando V Macedo", email = "fernandovmacedo@gmail.com" }]
keywords = ["git", "commit", "conventional-commits", "ai", "openrouter"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Version Control :: Git",
]
requires-python = ">=3.11"
dependencies = [
    "argcomplete>=3.0,<4.0",
    "litellm>=1.60.0,<2.0",
    "instructor>=1.7.0,<2.0",
    "pydantic>=2.0,<3.0",
    "rich>=13.0,<15.0",
]

[project.urls]
Homepage = "https://github.com/fernandovmacedo/autocommit"
Repository = "https://github.com/fernandovmacedo/autocommit"

[project.scripts]
autocommit = "autocommit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.0", "mypy>=1.10", "ruff>=0.4", "pytest-cov>=5.0"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
